Add toast notification after duplicating a receipt

--- a/src/ExpenseExplorer.WebApp/Components/Pages/Receipts.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/Receipts.razor
@@ -125,8 +125,9 @@
     {
         Result<Guid, string> result = await ReceiptService.DuplicateReceipt(id);
         await result.MatchAsync(
-            receiptId =>
+            async receiptId =>
             {
+                await _toast.OpenAsync("Copied");
                 NavigationManager.NavigateTo($"/receipts/{receiptId}");
                 return Unit.Instance;
             },
