Move Unit struct to Application namespace and update imports accordingly.

--- a/src/ExpenseExplorer.WebApp/Components/Pages/NewReceipt.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/NewReceipt.razor
@@ -1,4 +1,5 @@
 @page "/receipts/new"
+@using ExpenseExplorer.Application
 @using ExpenseExplorer.WebApp.Helpers
 @using ExpenseExplorer.WebApp.Services
 @inject ReceiptService ReceiptService
