--- a/src/ExpenseExplorer.WebApp/Components/Pages/Receipt.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/Receipt.razor
@@ -1,5 +1,6 @@
 @page "/Receipts/{receiptId:guid}"
 @using System.Globalization
+@using ExpenseExplorer.Application
 @using ExpenseExplorer.WebApp.Helpers
 @using ExpenseExplorer.WebApp.Models
 @using ExpenseExplorer.WebApp.Services
