--- a/src/ExpenseExplorer.WebApp/Components/Pages/Receipts.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/Receipts.razor
@@ -1,4 +1,5 @@
 @page "/"
+@using ExpenseExplorer.Application
 @using ExpenseExplorer.WebApp.Helpers
 @using ExpenseExplorer.WebApp.Models
 @using ExpenseExplorer.WebApp.Services
